[package]
name = "devp2p"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
k256 = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
aes = { workspace = true }
ctr = { workspace = true }
hmac = { workspace = true }
snap = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
url = { workspace = true }
hickory-resolver = { workspace = true }
data-encoding = { workspace = true }
base64 = { workspace = true }
crc32fast = { workspace = true }
thiserror = { workspace = true }
