[package]
name = "engine-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
alloy-primitives = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
sha3 = { workspace = true }

chain = { path = "../chain" }
serde-hex = { path = "../serde-hex" }

[dev-dependencies]
tempfile = "3"
