[package]
name = "eth-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alloy-primitives = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

chain = { path = "../chain" }
forks = { path = "../forks" }
serde-hex = { path = "../serde-hex" }
