[package]
name = "mining"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
alloy-primitives = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
axum = { workspace = true }

consensus = { path = "../consensus" }
chain = { path = "../chain" }
engine-api = { path = "../engine-api" }

[dev-dependencies]
sha3 = { workspace = true }
reqwest = { workspace = true }
